<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textEmailReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/email_registration"
                    android:textColor="@color/Black"
                    android:textSize="25sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textEmailReg" >

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textEmailReg"
                        android:layout_marginTop="30dp"
                        android:hint="@string/prompt_email"
                        android:lines="1"
                        android:maxLines="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue4"
                    app:counterEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_below="@id/text_layout_email" >

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_email"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password"
                        android:lines="1"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        style="@style/Widget.AppCompat.EditText"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue4"
                    app:hintTextAppearance="@color/colorAccent"
                    app:errorTextAppearance="@color/blue5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:counterEnabled="true"
                    android:layout_below="@id/text_layout_password" >

                    <EditText
                        android:id="@+id/input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_password"
                        android:layout_marginTop="20dp"
                        android:hint="@string/confirm_password"
                        android:lines="1"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_layout_confirm_password"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/register"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"/>

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />

</RelativeLayout>